# h5lib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/h5lib/: __init__.py  library.py  reader.py  types.py
src/h5see/: library.py  library.pyi  reader.py
