[project]
name = "h5lib"
version = "0.1.0"
description = "An Object-Oriented HDF5 Reader/Writer for Python."
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
keywords = ["HDF5", "hdf5"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "h5py (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
